Bug 1029719 - Release TextureClient on correct thread. r=jmuizelaar, a=1.4+