gfx/layers/client/CompositableClient.h
@@ -45,22 +45,22 @@ public:
   ~RemoveTextureFromCompositableTracker()
   {
     MOZ_COUNT_DTOR(RemoveTextureFromCompositableTracker);
+    ReleaseTextureClient();
   }
 
   virtual void Complete() MOZ_OVERRIDE
   {
-    // The TextureClient's recycling is postponed until the transaction
-    // complete.
-    mTextureClient = nullptr;
+    ReleaseTextureClient();
   }
 
   virtual void Cancel() MOZ_OVERRIDE
   {
-    mTextureClient = nullptr;
+    ReleaseTextureClient();
   }
 
   virtual void SetTextureClient(TextureClient* aTextureClient) MOZ_OVERRIDE
   {
+    ReleaseTextureClient();
     mTextureClient = aTextureClient;
   }
 
@@ -70,6 +70,9 @@ public:
       mTextureClient->SetReleaseFenceHandle(aReleaseFenceHandle);
     }
   }
+
+protected:
+  void ReleaseTextureClient();
 
 private:
   RefPtr<TextureClient> mTextureClient;
